# auth-cookie-pair

./: .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yaml  pyproject.toml  pytest.ini  ruff.toml  tox.ini
docs/: index.md  license.md  modules.md
tests/: test_package.py
