[project]
name = "auth-cookie-pair"
dynamic = ["version"]
description = "Tool for implementing access/refresh token authentication using cookies"
authors = [{ name = "alxevvv", email = "alxevvv@gmail.com" }]
dependencies = ["PyJWT>=2.8.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["python", "authentication", "cookies", "jwt"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "auth_cookie_pair/_version.py"
write_template = "__version__ = \"{}\"\n"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.5",
    "pre-commit>=3.7.1",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "covdefaults>=2.3.0",
    "deptry>=0.16.1",
    "tox>=4.15.0",
    "pytest-emoji>=0.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.25",
    "mkdocstrings[python]>=0.25.1",
    "freezegun>=1.5.1",
]

[tool.pdm.build]
package-dir = "."
includes = ["auth_cookie_pair/"]
excludes = ["./**/.git"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
